Thu Jan  2 16:11:38 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* ace/config-freebsd.h: Fix use of macros for FreeBSD 4.6:
          ACE_LACKS_RWLOCK_T, ACE_LACKS_READDIR_R, ACE_LACKS_SETSCHED,
          ACE_LACKS_PTHREAD_THR_SIGSETMASK. Do not define SCHED_RR,
	  SCHED_IO, SCHED_FIFO, SCHED_OTHER for FreeBSD >= 4.0, since they
	  are defined in sched.h. Thanks to Craig Rodrigues for providng
	  the patch.

Thu Jan  2 13:33:01 2003  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Refcounted_Auto_Ptr.i:

          Added #include of ace/Log_Msg.h for ACE_ASSERT.

        * bin/aix_shr:
                      
          Added -DTAO_INSTANTIATING_TEMPLATES to the link command line.

Thu Jan  2 12:38:55 2003  Johnny Willemsen <jwillemsen@remedy.nl>

	* ace/Makefile.ace: Set the dllflags in Makefile. This makes it
	  possible to do __declspec (dllexport) for the symbols in the
	  dll. This is needed for the Cygwin/MingW and Kylix compiler. 

	  Thid change takes care of the static and dynamic library cases.  

Thu Jan  2 08:57:26 2003  Johnny Willemsen <jwillemsen@remedy.nl>

	* include/makeinclude/platform_cygwin32.GNU:  Add
	  --enable-auto-import to the linker flags. This will result in
	  the linker doing auto-import without giving warnings about
	  it. 

Wed Jan  1 14:26:09 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* bin/topinfo_stats.sh: Forgot that we run this scripts in cron
	  environment. Set the path and other details that would help to
	  ease things.

Tue Dec 31 21:21:26 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* bin/generate_topinfo_charts.sh:
	* bin/topinfo_stats.sh: Scripts to track the memory usage and plot
	  them. At present it works only for the simple test in
	  $TAO_ROOT/performance-tests/Memory/Single_Threaded. 

Tue Dec 31 17:57:19 2002  Steve Huston  <shuston@riverace.com>

        * examples/Service_Configurator/IPC-tests/server/Handle_Thr_Stream.h: