@@ -1,3 +1,13 @@
+Thu Jan  2 17:44:29 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
+
+	* ace/config-cygwin32-common.h: Set the custom export
+	  macro's. These will be used when building dynamically with the
+	  cygwin compiler. 
+
+	* bin/MakeProjectCreator/templates/gnu.mpd: Generate dllflags and
+	  libflags into the GNU makefiles. These are important for the
+	  Cygwin/MingW and Kylix compiler. 
+
 Thu Jan  2 16:11:38 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
 
 	* ace/config-freebsd.h: Fix use of macros for FreeBSD 4.6:
